<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PreguntaDiez">

    <Button
        android:id="@+id/sig10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:backgroundTint="#00BCD4"
        android:onClick="Saltar"
        android:text="@string/sal"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.891"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:layout_width="294dp"
        android:layout_height="192dp"
        android:layout_marginTop="268dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <RadioButton
            android:id="@+id/rp28"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rp10_1"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/rp29"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:text="@string/rp10_2"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/rp30"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rp10_3" />
    </RadioGroup>

    <Button
        android:id="@+id/s10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="592dp"
        android:backgroundTint="#FF5722"
        android:text="@string/sig"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:textAlignment="center"
        android:textColor="#3F51B5"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/p10" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/p101"
        android:textAlignment="center"
        android:textColor="#E91E63"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/p102"
        android:textColor="#3F51B5"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView24" />
</androidx.constraintlayout.widget.ConstraintLayout>