<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PreguntaVeinte">

    <Button
        android:id="@+id/sig20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:backgroundTint="#00BCD4"
        android:onClick="Saltar"
        android:text="@string/sal"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.891"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:layout_width="302dp"
        android:layout_height="312dp"
        android:layout_marginTop="192dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <RadioButton
            android:id="@+id/rp55"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/rp20_1" />

        <RadioButton
            android:id="@+id/rp56"
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:text="@string/rp20_2" />

        <RadioButton
            android:id="@+id/rp57"
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:text="@string/rp20_3" />
    </RadioGroup>

    <Button
        android:id="@+id/s20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="96dp"
        android:backgroundTint="#E91E63"
        android:text="@string/fin"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:text="@string/p20"
        android:textAlignment="center"
        android:textColor="#3F51B5"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>