<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PreguntaCatorce">

    <RadioGroup
        android:layout_width="317dp"
        android:layout_height="321dp"
        android:layout_marginTop="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rp40"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:text="@string/rp14_1"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/rp41"
            android:layout_width="match_parent"
            android:layout_height="78dp"
            android:text="@string/rp14_2"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/rp42"
            android:layout_width="match_parent"
            android:layout_height="131dp"
            android:text="@string/rp14_3"
            android:textSize="16sp" />
    </RadioGroup>

    <Button
        android:id="@+id/s14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="96dp"
        android:backgroundTint="#FF5722"
        android:text="@string/sig"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="415dp"
        android:layout_height="68dp"
        android:layout_marginTop="88dp"
        android:text="@string/p14"
        android:textAlignment="center"
        android:textColor="#3F51B5"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/sig14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:backgroundTint="#00BCD4"
        android:onClick="Saltar"
        android:text="@string/sal"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.891"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>