<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PreguntaSiete">

    <Button
        android:id="@+id/sig7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:backgroundTint="#00BCD4"
        android:onClick="Saltar"
        android:text="@string/sal"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.891"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:layout_width="294dp"
        android:layout_height="209dp"
        android:layout_marginTop="236dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rp19"
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:text="@string/rp7_1"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/rp20"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:text="@string/rp7_2"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/rp21"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:text="@string/rp7_3"
            android:textSize="16sp" />
    </RadioGroup>

    <Button
        android:id="@+id/s7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="92dp"
        android:backgroundTint="#FF5722"
        android:text="@string/sig"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="136dp"
        android:text="@string/p7"
        android:textAlignment="center"
        android:textColor="#3F51B5"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>